# python-darima

./: .Rhistory  .gitignore  DAinBD_DARIMA.Rmd  LICENSE  README.md  R_tests.py  auto_arima.R  code_darima_wip.txt  config  darima.py  darima_config.json  docker-compose.yaml  forecast.json  forecasted_values.csv  pyproject  pyproject.toml  references.bib  requirements.txt  spark.py  tests.py
R/: auto_arima.R  convert_forecast_to_py.py  convert_to_r_time_series.py  forecasting_darima.R  r_arima.R
arima/: pyproject.toml
arima/eval/: akaike.py
arima/stationarity_tests/: kpss.py
configs/: darima_config.json  etl_config.json
data/: CT_test.csv
dependencies/: spark.py
docs/: conf.py  darima.rst  index.rst  overview.rst  py_handlers.rst  py_spark.rst  r.rst
gcp/: create.sh  install.sh  job.sh
jobs/: darima.py  forecast.py
py_handlers/: converters.py  utils.py
py_spark/: spark.py
tests/: test_etl_job.py
