[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "arima"
version = "0.1.0"
authors = [
    {name = "Vladislav Stasenko", email = "stasenko.vladislav@fh-swf.de"},
]
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
    "numpy"
]